# pubCrawler

./: README.md
pathFinder/: CHANGELOG.md  LICENSE  pathFinder.cabal  stack.yaml
pathFinder/dist-newstyle/cache/: compiler  config
pathFinder/src/: Main.hs  Tests.hs
pathFinder/test/: Spec.hs
