cabal-version:       2.2

name:                pathFinder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pathFinder#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Oliver Whitefoot
maintainer:          example@example.com
copyright:           2025 Oliver Whitefoot
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable pathFinder
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, tasty, tasty-hunit
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
